--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.3",
+    "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.30.5",
+    "drizzle-orm": "^0.40.0",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "react": "^19.0.0",
