--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.5",
     "drizzle-orm": "^0.40.0",
+    "firebase": "^11.5.0",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "openai": "^4.86.2",
